--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -34,6 +34,7 @@
   background: #EB5617;
   transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip */
 }
+
 /* Image (19) 2 - Background Overlay */
 .image-19-2 {
   position: absolute;
@@ -227,6 +228,7 @@
   flex: none;
   order: 1;
   flex-grow: 0;
+  white-space: nowrap; /* Keeps "Pump up the balloon" in one line */
 }
 
 .button-danger .x {
@@ -287,35 +289,4 @@
   flex: none;
   order: 2;
   flex-grow: 0;
-}
-/* Group 20937 - Top Bar */
-.group-20937 {
-  position: absolute;
-  width: 1440px;
-  height: 31.44px;
-  left: 0px;
-  top: 0px;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-}
-
-/* Rectangle 746 */
-.rectangle-746 {
-  position: absolute;
-  width: 720px;
-  height: 31.44px;
-  right: 720px;
-  top: 0px;
-  background: #1B577E;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-}
-
-/* Rectangle 745 */
-.rectangle-745 {
-  position: absolute;
-  width: 744.67px;
-  height: 31.44px;
-  left: 695.33px;
-  top: 0px;
-  background: #EB5617;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
 }
