--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -13,27 +13,29 @@
   height: 31.44px;
   left: 0px;
   top: 0px;
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip for the entire group */
 }
 
 /* Rectangle 746 - Blue Section */
 .rectangle-746 {
   position: absolute;
-  width: 720px; /* Half of 1440px */
+  width: 720px;
   height: 31.44px;
-  left: 0px; /* Align to the left */
+  right: 720px; /* Positions blue section on the right before flip */
   top: 0px;
   background: #1B577E;
-  border-right: 2px solid #FFD700; /* Thicker gold divider for visibility */
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip */
 }
 
 /* Rectangle 745 - Orange Section */
 .rectangle-745 {
   position: absolute;
-  width: 720px; /* Adjusted to fill the remaining space */
+  width: 720px; /* Adjusted to match total width with .rectangle-746 */
   height: 31.44px;
-  left: 720px; /* Start after .rectangle-746 */
+  left: 0px; /* Positions orange section on the left before flip */
   top: 0px;
   background: #EB5617;
+  transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip */
 }
 
 /* Rest of the CSS remains unchanged */
@@ -140,10 +142,14 @@
 
 /* Group 20909 - Text Elements (inside .rectangle-744) */
 .group-20909 {
-  width: 100%;
-  max-width: 303px;
-  height: auto;
-  text-align: center;
+  text-align: right;
+  width: 303px; /* Added 'px' unit */
+  height: 223.21923828125px; /* Added 'px' unit */
+  transform: rotate(0deg); /* Replaced 'angle' with 'transform: rotate' */
+  opacity: 1;
+  top: 373.12px;
+  left: 773.49px;
+  position: absolute; /* Added to make 'top' and 'left' work */
 }
 
 /* Balloon Number: 1 of 30 */
