--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -38,6 +38,76 @@
   transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip */
 }
 
+/* Group 20909 - Text Container */
+.group-20909 {
+  position: absolute;
+  width: 303px;
+  height: 223.22px;
+  left: 773.49px;
+  top: 373.12px;
+  z-index: 6;
+}
+
+/* Text Elements */
+.balloon-number {
+  position: absolute;
+  width: 270px;
+  height: 40px;
+  left: calc(50% - 270px / 2 + 188.49px);
+  top: 373.12px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: center; /* Changed from justify */
+  color: #333333;
+}
+
+.potential-earnings {
+  position: absolute;
+  width: 303px;
+  height: 40px;
+  left: calc(50% - 303px / 2 + 204.99px);
+  top: 434.19px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: center; /* Changed from justify */
+  color: #333333;
+}
+
+.number-pumps {
+  position: absolute;
+  width: 253px;
+  height: 40px;
+  left: calc(50% - 253px / 2 + 179.99px);
+  top: 495.26px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: center; /* Changed from justify */
+  color: #333333;
+}
+
+.total-winnings {
+  position: absolute;
+  width: 263px;
+  height: 40px;
+  left: calc(50% - 263px / 2 + 184.99px);
+  top: 556.34px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 40px;
+  text-align: center; /* Changed from justify */
+  color: #333333;
+}
 /* Rest of the CSS remains unchanged */
 .image-19-2 {
   position: absolute;
@@ -142,14 +212,10 @@
 
 /* Group 20909 - Text Elements (inside .rectangle-744) */
 .group-20909 {
-  text-align: right;
-  width: 303px; /* Added 'px' unit */
-  height: 223.21923828125px; /* Added 'px' unit */
-  transform: rotate(0deg); /* Replaced 'angle' with 'transform: rotate' */
-  opacity: 1;
-  top: 373.12px;
-  left: 773.49px;
-  position: absolute; /* Added to make 'top' and 'left' work */
+  width: 100%;
+  max-width: 303px;
+  height: auto;
+  text-align: center;
 }
 
 /* Balloon Number: 1 of 30 */
