--- a/src/balloondemo.css
+++ b/src/balloondemo.css
@@ -12,9 +12,23 @@
   position: absolute;
   width: 1440px;
   height: 31.44px;
-  left: 15px; /* Moved 15px to the right */
+  left: 30px; /* Moved 15px + 15px = 30px to the right */
   top: 0px;
   transform: matrix(-1, 0, 0, 1, 0, 0); /* Horizontal flip */
+}
+
+/* Diagonal Divider Line (Backslash \) */
+.group-20937::after {
+  content: '';
+  position: absolute;
+  width: 2px; /* Exactly 2px thick, as specified */
+  height: 40px; /* Covers 31.44px height diagonally */
+  background: #000000; /* Black for visibility */
+  left: 720px; /* Center of 1440px, adjusted for flip */
+  top: -4px; /* Centered vertically */
+  transform: rotate(45deg); /* Backslash (\) orientation, not straight */
+  transform-origin: center;
+  z-index: 3; /* Above both rectangles */
 }
 
 /* Rectangle 746 - Blue Section */
@@ -26,19 +40,19 @@
   top: 0px;
   background: #1B577E;
   transform: matrix(-1, 0, 0, 1, 0, 0);
-  z-index: 1; /* Below .rectangle-745 in overlap */
+  z-index: 1;
 }
 
 /* Rectangle 745 - Orange Section */
 .rectangle-745 {
   position: absolute;
-  width: 744.67px;
+  width: 720px; /* Adjusted to avoid overlap */
   height: 31.44px;
-  left: 695.33px;
+  left: 0px; /* Start at left */
   top: 0px;
   background: #EB5617;
   transform: matrix(-1, 0, 0, 1, 0, 0);
-  z-index: 2; /* Above .rectangle-746 in overlap */
+  z-index: 2;
 }
 
 /* Group 20909 - Text Container */
